0.9dev (unreleased)
===================

Documentation
-------------

- Added "BFG Wiki" tutorial to documentation; it describes
  step-by-step how to create a traversal-based ZODB application with
  authentication.

Deprecated Alias Removals
-------------------------

- Removed backwards compatibility aliases for
  ``repoze.bfg.router.get_options`` and ``repoze.bfg.router.Settings``
  (deprecated since 0.6.2).  These both must now be imported from
  ``repoze.bfg.settings``.

0.9a2 (2009-05-27)
==================

Features
--------

- A paster command has been added named "bfgshell".  This command can
  be used to get an interactive prompt with your BFG root object in
  the global namespace.  E.g.::

    bin/paster bfgshell /path/to/myapp.ini myapp

  See the ``Project`` chapter in the BFG documentation for more
  information.

Deprecations
------------

- The name ``repoze.bfg.registry.registry_manager`` was never an API,
  but scripts in the wild were using it to set up an environment for
  use under a debug shell.  A backwards compatibility shim has been
  added for this purpose, but the feature is deprecated.

0.9a1 (2009-5-27)
=================

Features
--------

- New API functions named ``forget`` and ``remember`` are available in
  the ``security`` module.  The ``forget`` function returns headers
  which will cause the currently authenticated user to be logged out
  when set in a response.  The ``remember`` function (when passed the
  proper arguments) will return headers which will cause a principal
  to be "logged in" when set in a response.  See the Security API
  chapter of the docs for more info.

- New keyword arguments to the ``repoze.bfg.router.make_app`` call
  have been added: ``authentication_policy`` and
  ``authorization_policy``.  These should, respectively, be an
  implementation of an authentication policy (an object implementing
  the ``repoze.bfg.interfaces.IAuthenticationPolicy`` interface) and